Add age/span support
