# gramps_webapi/data/apispec.yaml
@@ -784,6 +784,61 @@ paths:
         404:
           description: "Not Found: Event not found."
 
+  /events/{handle1}/span/{handle2}:
+    get:
+      tags:
+      - events
+      summary: "Get elapsed time span between two events."
+      operationId: getEventSpan
+      security:
+        - Bearer: []
+      parameters:
+      - name: handle1
+        in: path
+        required: true
+        type: string
+        description: "The unique identifier for the first event."
+      - name: handle2
+        in: path
+        required: true
+        type: string
+        description: "The unique identifier for the second event."
+      - name: as_age
+        in: query
+        required: false
+        type: boolean
+        default: true
+        description: "Indicates whether to return result as an age or not."
+      - name: locale
+        in: query
+        required: false
+        type: string
+        description: "Specifies the locale for the translated string if one other than the current default is desired. Should be a valid language code from the available list of translations."
+      - name: precision
+        in: query
+        required: false
+        type: integer
+        default: 2
+        description: >
+          Selects the number of significant levels for the string representation. Values may be:
+
+            Precision | Description
+            --------- | -----------
+            1 | Only the most significant level (year, month, day)
+            2 | Only the two most significant levels (year, month, day)
+            3 | At most three items of signifance (year, month, day)
+      responses:
+        200:
+          description: "OK: Successful operation."
+          schema:
+            $ref: "#/definitions/Span"
+        400:
+          description: "Bad Request: Bad syntax or parameter."
+        401:
+          description: "Unauthorized: Missing authorization header."
+        404:
+          description: "Not Found: Event not found."
+    
 ##############################################################################
 # Endpoint - Places
 ##############################################################################
@@ -5413,6 +5468,18 @@ definitions:
         - Generated by
       source_media_types:
         - Microfilm
+
+##############################################################################
+# Model - Span
+##############################################################################
+
+  Span:
+    type: object
+    properties:
+      span:
+        type: string
+        description: "A description of a period of elapsed time."
+        example: "82 years, 7 months, 28 days"
 
 ##############################################################################
 # Model - Backlinks
